# Console-Application-using-Named-Pipes

./: .clang-format  .gitignore  CMakeLists.txt
src/: common.cc  common.h  controller.cc  controller.h  i_connection_method.h  log.h  main.cc  node.cc  node.h  pipe.cc  pipe.h
